<resources>
    <string name="app_name">Smart Restaurant</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="Login">Login</string>
    <string name="Staff">Staff</string>
    <string name="Diners">Diners</string>
    <string name="Account">Account</string>
    <string name="Password">Password</string>
    <string name="CreateAccount">You need Account? </string>
    <string name="Registration">Registration</string>
    <string name="SignIn">Sign In</string>
    <string name="Phone">Phone</string>
    <string name="Manager">Manager</string>
    <string name="AccountRequired">To log in you must have an account provided by the restaurant</string>
    <string name="MenuFood">Menu Food</string>
    <string name="TableDiner">Table Diner</string>
    <string name="ProfileStaff">Profile Staff</string>
    <string name="Revenue">Revenue</string>
    <string name="Home">Home</string>
    <string name="Summary">summary</string>
    <string name="Communicate">Communicate</string>
    <string name="Share">Share</string>
    <string name="Rate">Rate</string>
    <string name="Rank">Rank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="HomeFragment">Hello Home fragment</string>
    <string name="StaffFragment">Hello Staff fragment</string>
    <string name="MenuFoodFragment">Hello MenuFood fragment</string>
    <string name="RevenueFragment">Hello Revenue fragment</string>
</resources>