<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="10"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginStaffActivity">
    <LinearLayout
        android:weightSum="6"
        android:orientation="horizontal"
        android:background="@color/teal_200"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageButton
            android:id="@+id/img_ButtonBack"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="NestedWeights" />
        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="38sp"
            android:text="@string/Login"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="11"
        android:orientation="vertical"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/imglogo"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:ignore="NestedWeights" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:maxLines="1"
                android:lines="1"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:text="@string/AccountRequired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:id="@+id/edt_LoginAccount"
                android:gravity="center_horizontal"
                android:textSize="32sp"
                android:background="@drawable/custom_view"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/Account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:maxLines="1"
                android:lines="1"
                android:id="@+id/edt_LoginPassword"
                android:gravity="center_horizontal"
                android:textSize="32sp"
                android:background="@drawable/custom_view"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:inputType="textPassword"
                android:hint="@string/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_LoginAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/custom_button"
                android:text="@string/Login"
                app:backgroundTint="@color/pink" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>