<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="21"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_weight="9"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/imglogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Login"
            android:textColor="@color/red"
            android:textSize="46sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_LoginStaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_button"
            android:gravity="center_horizontal"
            android:hint="@string/Staff"
            android:textSize="24sp"
            app:backgroundTint="@color/teal_200" />

        <Button
            android:id="@+id/btn_LoginDiners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_button"
            android:gravity="center_horizontal"
            android:hint="@string/Diners"
            android:textSize="24sp"
            app:backgroundTint="@color/teal_200" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="5"
        android:gravity="end"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights">
            <ImageView
                android:id="@+id/img_IconVN"
                android:layout_margin="15dp"
                android:background="@drawable/icon_vn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights">
            <ImageView
                android:id="@+id/img_IconEng"
                android:layout_margin="15dp"
                android:background="@drawable/icon_england"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>